package enums;
/**
 * Specifies the supported communication channels for system notifications.
 * Used by the notification manager to determine how alerts are delivered.
 */
public enum NotificationType {
    EMAIL,
    SMS,
    CONSOLE
}
