package enums;
/**
 * Classifies tasks based on their technical nature or domain.
 * Used for filtering, statistics, and reporting within the dashboard.
 */
public enum TaskCategory {
    BUGFIX,
    FEATURE,
    DOCUMENTATION,
    RESEARCH
}
