package model;

public class TaskHistoryEntry {

}
